2013-01-11  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* init/generic-numeric-table.lisp (table-description): Added
	`description' slot to the table and `table-description' accessor

	* numeric-table.asd (#:numeric-table): Fixed typo

	* init/utilities.lisp (init-vv-array): Fixed bug in export list

	* column-major-table/table-building.lisp (init-storage): Added
	method specializing on column-major-table

	* init/generic-numeric-table.lisp (init-storage): Added
	init-storage generic function and exporting symbol

	* numeric-table.asd (numeric-table): Added dependency on `cl-cvs'

	* init/generic-numeric-table.lisp (:numeric-table): Added export
	of `column-name'

	* column-major-table/interpolated-column.lisp (:numeric-table):
	Changed calls from class-specific method `interp-column' to more
	generic `evaluate'

	* column-major-table/foreign-column.lisp
	(coerce-vector-grid-type): Fixed call to `grid:copy-to' to specify
	the element type

2013-01-06  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* column-major-table/interpolated-column.lisp (interp-column)
	(evaluate): Replaced interp-column function with evaluate.

	* column-major-table/column-fitting.lisp (column-fit): Moved
	fit-coeffs slot from linear-column-fit to column-fit.  This makes
	it avaialable to non-linear fitting

	* column-major-table/non-lin-least-sq-fit-column.lisp (evaluate):
	Added method for nonlinear fitting

2013-01-05  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* column-major-table/non-lin-least-sq-fit-column.lisp
	(init-nonlin-column-fit): Added generic function and method
	specialized on column names.

	* column-major-table/linear-least-squares-fit-column.lisp
	(fit-estimate): Renaming to `evaluate'

	* column-major-table/matching-functions.lisp (column-matcher):
	bug-fix.  I now normalize function prior to matching

	* column-major-table/foreign-column.lisp
	(coerce-vector-grid-type): Routines for foreign schemas

	* column-major-table/matching-functions.lisp (in): Added the `in'